2003-05-25  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b39

	* Fixed a security problem in gallery_remote2.php, where users
	  could create new nested albums inside albums where they didn't
	  have that permission.

	* Fixed some error reporting in gallery_remote2.php.

2003-05-24  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b38

	* Refactored add_photo.php to use util.php's processNewImage()
	  so that, among other things, it gets autorotation for free.

	* Fixed bug where add_photo.php's variable names conflict with
	  PostNuke's

2003-05-24  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b37

	* Changed "Extra Fields" to "Custom Fields" (GUI only)

	* Removed function msg, and used processingMsg from util.php

	* Removed diagnostic from  printAlbumOptionList

2003-05-23  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b36

	* Updated copyrights/$GALLERY_BASEDIR fix for extra fields code.

	* Added "jpeg" to acceptable image tag list (alongside "jpg").

	* Fixed error in ImageMagick "convert" call where some shells
	  would expand the '*' from the '+profile' flag, breaking image
	  uploads. (Bug #703641)

2003-05-22  John Kirkland  <jpk@bl.org> 1.3.4-cvs-b35

	* Rewrote printAlbumOptionList and printNestedVals in util.php
	  to conform to the requirements that I added as code comments
	  above the 2 functions.  This fixes defects #488281 & #669764.
	
	* Bug fix in view_album.php with showAdminForm when a non-admin
	  owns a nested album and not the parent album.

2003-05-21  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b34

	* Fixed an incorrect short PHP tag in view_album.php 

	* Fixed a minor bug in add_photo.php where the fields were getting
	  seeded with invalid data.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b33

	* Added 2 new file names to index.php.

	* Added album summary search

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b32
