@@ -1,3 +1,8 @@
+2003-05-28  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b40
+
+	*  Added backup_albums.php.  Linked from albums.php, but that 
+	   perhaps should be removed.
+
 2003-05-25  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b39
 
 	* Fixed a security problem in gallery_remote2.php, where users
